webshop fix more overflow issues

--- a/src/sources/forus-webshop/scss/_common/sections/blocks/block-funds-list.scss
+++ b/src/sources/forus-webshop/scss/_common/sections/blocks/block-funds-list.scss
@@ -123,12 +123,13 @@
 
             .fund-photo {
                 width: 80px;
+                min-width: 80px;
                 justify-content: flex-start;
             }
 
             .fund-content {
                 flex-direction: row;
-                flex-grow: 1;
+                width: calc(100% - 80px);
             }
 
             .fund-details {
@@ -142,6 +143,8 @@
 
                 .fund-name {
                     font: 700 16px/24px var(--base-font);
+                    word-wrap: break-word;
+                    padding-right: 60px;
                 }
 
                 .fund-organization {
