--- a/src/sources/forus-webshop/scss/_common/sections/blocks/block-organizations.scss
+++ b/src/sources/forus-webshop/scss/_common/sections/blocks/block-organizations.scss
@@ -219,6 +219,15 @@
             .organization-pane {
                 .organization-pane-info {
                     padding: 15px 10px;
+                    width: calc(100% - 50px);
+
+                    .organization-title {
+                        overflow: hidden;
+
+                        .organization-title-value {
+                            word-wrap: break-word;
+                        }
+                    }
                 }
 
                 .organization-pane-collapse {
